# Flights-Gear-Anomaly-Detector

./: AnomalyDetector.h  CMakeLists.txt  MainTrain.cpp  README.md  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  minCIrcle.cpp  minCircle.h  timeseries.cpp  timeseries.h
